# stt

./: .gitignore  README.md  pyproject.toml
data/: accretion_task_a.txt  accretion_task_b_rehearsal.txt  accretion_task_b_related.txt  accretion_task_b_related_strong.txt  accretion_task_c_conflict.txt  accretion_task_n_neutral.txt  conflict2_task_a.txt  conflict2_task_b.txt  conflict_task_a.txt  conflict_task_b.txt  memory_probe_ambiguous_scope.txt  memory_probe_beta_boundary.txt  memory_probe_epsilon_boundary.txt  memory_probe_gamma_boundary.txt  memory_probe_select_ambiguous_scope.txt  memory_probe_select_beta_boundary.txt  memory_probe_select_epsilon_boundary.txt  memory_probe_select_gamma_boundary.txt  memory_task_a.txt  memory_task_b_related.txt  memory_task_c_conflict.txt  memory_task_d_unrelated.txt  memory_task_e_conflict.txt  wikitext2_corpus.txt  wikitext2_task_a.txt  wikitext2_task_b.txt
docs/: accretion.md  continual-tasks.md  experiment-design.md  memory-bank.md  oracle-composition.md  routed-accretion.md
scripts/: make_conflict2_data.py
src/stt/: __init__.py  accretion.py  accretion_data.py  analyze.py  continual.py  data.py  experiment.py  lora_experiment.py  losses.py  memory_bank.py  metrics.py  model.py  oracle_compose.py  oracle_route.py  routed_accretion.py  toy_accretion.py
tests/: test_accretion.py  test_analyze.py  test_continual.py  test_experiment.py  test_lora_experiment.py  test_losses.py  test_memory_bank.py  test_metrics.py  test_model.py  test_oracle_compose.py  test_oracle_route.py  test_routed_accretion.py  test_toy_accretion.py
