[tool.poetry]
name = "surface-tension-transformers"
version = "0.1.0"
description = "Minimal experiments for Surface Tension Transformer regularizers."
authors = ["Jon <jon@example.com>"]
readme = "README.md"
packages = [{ include = "stt", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = ">=2.2,<3.0"
numpy = ">=1.26,<3.0"
transformers = ">=4.45,<5.0"
peft = ">=0.13,<1.0"
datasets = ">=3.0,<5.0"
accelerate = ">=0.30,<2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0,<9.0"
ruff = ">=0.14,<0.15"
ty = ">=0.0.1a20"

[tool.poetry.scripts]
stt-experiment = "stt.experiment:main"
stt-toy-accretion = "stt.toy_accretion:main"
stt-lora = "stt.lora_experiment:main"
stt-analyze = "stt.analyze:main"
stt-continual = "stt.continual:main"
stt-accretion = "stt.accretion:main"
stt-oracle-compose = "stt.oracle_compose:main"
stt-oracle-route = "stt.oracle_route:main"
stt-routed-accretion = "stt.routed_accretion:main"
stt-memory-bank = "stt.memory_bank:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
